force-app/main/default/objects/Rate_List_Detail__c/Rate_List_Detail__c.object-meta.xml
<CustomObject>
    <label>Rate List Detail</label>
    <nameField>
        <label>Rate List Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rate List Details</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>