force-app/main/default/objects/Rate_List_Detail__c/fields/Area_Type_Charge__c.field-meta.xml
<CustomField>
    <fullName>Area_Type_Charge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Area Type</label>
    <referenceTo>Area_Type__c</referenceTo>
    <relationshipLabel>Rate List Details</relationshipLabel>
    <relationshipName>Rate_List_Details</relationshipName>
    <type>Lookup</type>
</CustomField>