force-app/main/default/objects/Rate_List_Detail__c/fields/Based_on_Property_Area__c.field-meta.xml
<CustomField>
    <fullName>Based_on_Property_Area__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Based on Property Area</label>
    <type>Checkbox</type>
</CustomField>