force-app/main/default/objects/Rate_List_Detail__c/fields/Charge_Based_On__c.field-meta.xml
<CustomField>
    <fullName>Charge_Based_On__c</fullName>
    <label>Charge Based On</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rate</fullName>
            </value>
            <value>
                <fullName>Lumpsum</fullName>
            </value>
            <value>
                <fullName>Percent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>