force-app/main/default/objects/Rate_List_Detail__c/fields/Chk_param4__c.field-meta.xml
<CustomField>
    <fullName>Chk_param4__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chk_param4</label>
    <type>Checkbox</type>
</CustomField>