force-app/main/default/objects/Rate_List_Detail__c/fields/Floor_Range_To__c.field-meta.xml
<CustomField>
    <fullName>Floor_Range_To__c</fullName>
    <label>Floor Range To</label>
    <length>3</length>
    <type>Text</type>
</CustomField>