force-app/main/default/objects/Rate_List_Detail__c/fields/Param2__c.field-meta.xml
<CustomField>
    <fullName>Param2__c</fullName>
    <label>Param2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>