force-app/main/default/objects/Rate_List_Detail__c/fields/Param_1__c.field-meta.xml
<CustomField>
    <fullName>Param_1__c</fullName>
    <label>Param 1</label>
    <length>30</length>
    <type>Text</type>
</CustomField>