force-app/main/default/objects/Rate_List_Detail__c/fields/Param_3__c.field-meta.xml
<CustomField>
    <fullName>Param_3__c</fullName>
    <label>Param 3</label>
    <length>30</length>
    <type>Text</type>
</CustomField>