force-app/main/default/objects/Rate_List_Detail__c/fields/Param_4__c.field-meta.xml
<CustomField>
    <fullName>Param_4__c</fullName>
    <label>Param 4</label>
    <length>30</length>
    <type>Text</type>
</CustomField>