force-app/main/default/objects/Rate_List_Detail__c/fields/Percent__c.field-meta.xml
<CustomField>
    <fullName>Percent__c</fullName>
    <label>Charge Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>