force-app/main/default/objects/Rate_List_Detail__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Name</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Rate List Details</relationshipLabel>
    <relationshipName>Rate_List_Details</relationshipName>
    <type>Lookup</type>
</CustomField>