force-app/main/default/objects/Rate_List_Detail__c/fields/Project_Area_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Area_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Area Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Project__c</field>
            <operation>equals</operation>
            <valueField>Project_Area_Type__c.Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Project_Area_Type__c</referenceTo>
    <relationshipLabel>Rate List Details (Project Area Type)</relationshipLabel>
    <relationshipName>Rate_List_Details1</relationshipName>
    <type>Lookup</type>
</CustomField>