force-app/main/default/objects/Rate_List_Detail__c/fields/Ranges_To__c.field-meta.xml
<CustomField>
    <fullName>Ranges_To__c</fullName>
    <label>Ranges To</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>