force-app/main/default/objects/Rate_List_Detail__c/fields/Rate_List_Header__c.field-meta.xml
<CustomField>
    <fullName>Rate_List_Header__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rate List Header</label>
    <referenceTo>Rate_List_Header__c</referenceTo>
    <relationshipLabel>Rate List Details</relationshipLabel>
    <relationshipName>Rate_List_Details</relationshipName>
    <type>Lookup</type>
</CustomField>