force-app/main/default/objects/Rate_List_Detail__c/fields/Unit_Number_Structure__c.field-meta.xml
<CustomField>
    <fullName>Unit_Number_Structure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit Number Structure</label>
    <referenceTo>Unit_Number_Structure__c</referenceTo>
    <relationshipLabel>Rate List Details</relationshipLabel>
    <relationshipName>Rate_List_Details</relationshipName>
    <type>Lookup</type>
</CustomField>