force-app/main/default/objects/Rate_List_Detail__c/validationRules/Based_on_Property_Area.validationRule-meta.xml
<ValidationRule>
    <fullName>Based_on_Property_Area</fullName>
    <active>false</active>
    <errorConditionFormula>IF(  Based_on_Property_Area__c =true , ISNULL(  Area_Type__c ) , NOT( ISNULL(      Area_Type__c  ) ))</errorConditionFormula>
    <errorDisplayField>Based_on_Property_Area__c</errorDisplayField>
    <errorMessage>Check this Field</errorMessage>
</ValidationRule>