force-app/main/default/objects/Rate_List_Detail__c/validationRules/Based_on_Property_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Based_on_Property_Type</fullName>
    <active>false</active>
    <errorConditionFormula>IF(  Based_on_Property_Type__c =true , ISNULL(  Global_Unit_of_Measurement__c ) , NOT( ISNULL(  Global_Unit_of_Measurement__c ) ))</errorConditionFormula>
    <errorDisplayField>Based_on_Property_Type__c</errorDisplayField>
    <errorMessage>Check this Field</errorMessage>
</ValidationRule>