force-app/main/default/objects/Rate_List_Detail__c/validationRules/Charge_Based_On.validationRule-meta.xml
<ValidationRule>
    <fullName>Charge_Based_On</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL( Charge_Based_On__c ,&quot;Rate&quot;)  &amp;&amp; NOT( ISNULL(Percent__c)) || 
ISPICKVAL( Charge_Based_On__c ,&quot;Lumpsum&quot;)  &amp;&amp; NOT( ISNULL(Percent__c))</errorConditionFormula>
    <errorDisplayField>Charge_Based_On__c</errorDisplayField>
    <errorMessage>Pick Percent from Picklist</errorMessage>
</ValidationRule>