force-app/main/default/objects/Rate_List_Detail__c/validationRules/Dont_Save_If_Processed.validationRule-meta.xml
<ValidationRule>
    <fullName>Dont_Save_If_Processed</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Rate_List_Header__r.Rate_List_Status__c  , &apos;Processed&apos;)</errorConditionFormula>
    <errorMessage>Cannot Save Record because the Rate List is already processed.</errorMessage>
</ValidationRule>