force-app/main/default/objects/Rate_List_Detail__c/validationRules/Percent_Value_must_be_between_100.validationRule-meta.xml
<ValidationRule>
    <fullName>Percent_Value_must_be_between_100</fullName>
    <active>false</active>
    <errorConditionFormula>Percent__c &lt;1 ||  Percent__c&gt;100</errorConditionFormula>
    <errorDisplayField>Percent__c</errorDisplayField>
    <errorMessage>Percent value should between 100</errorMessage>
</ValidationRule>