force-app/main/default/objects/Rate_List_Detail__c/validationRules/Property_Number_Structure.validationRule-meta.xml
<ValidationRule>
    <fullName>Property_Number_Structure</fullName>
    <active>false</active>
    <errorConditionFormula>IF( Based_on_Property_Number_Structure__c=true ,  ISNULL( Unit_Number_Structure__c ) , NOT( ISNULL( Unit_Number_Structure__c ) ))</errorConditionFormula>
    <errorDisplayField>Based_on_Property_Number_Structure__c</errorDisplayField>
    <errorMessage>Check this field</errorMessage>
</ValidationRule>